# crewai_ibov

./: README.md  requirements.txt
crewai_ibov/: .gitignore  README.md  pyproject.toml  report.md
crewai_ibov/src/crewai_ibov/: crew.py  main.py
