[project]
name = "crewai_ibov"
version = "0.1.0"
description = "crewai_ibov using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
crewai_ibov = "crewai_ibov.main:run"
run_crew = "crewai_ibov.main:run"
train = "crewai_ibov.main:train"
replay = "crewai_ibov.main:replay"
test = "crewai_ibov.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
